	  is_alnum_mbchar(), is_alnum_wchar(), is_blank_mbchar(),
	  is_blank_wchar(), is_cntrl_mbchar(), is_cntrl_wchar(),
	  mbstrnlen(), control_mbrep(), control_wrep(), mbwidth(),
	  mb_cur_max(), and make_mbchar(); changes to is_blank_char()
	  (moved to chars.c), is_cntrl_char() (moved to chars.c),
	  nstrnlen() (moved to chars.c), parse_char() (renamed
	  parse_mbchar() and moved to chars.c), do_home(),
	  do_verbatim_input(), do_delete(), do_tab(), do_next_word(),
	  do_input(), do_output(), get_buffer(), unget_input(),
	  unget_kbinput(), get_input(), parse_kbinput(),
	  unparse_kbinput(), parse_verbatim_kbinput(),
	  do_statusbar_input(), do_statusbar_home(),
	  do_statusbar_verbatim_kbinput(), do_statusbar_output(), and
	  display_string(); removal of buffer_to_keys() and
	  keys_to_buffer(). (DLR)
- cut.c:
  do_cut_text()
	- If keep_cutbuffer is FALSE, only blow away the text in the
	  cutbuffer if the cutbuffer isn't empty. (DLR)
  do_uncut_text()
	- No longer duplicate Pico's adding an extra magicline to the
	  file if uncutting leaves the cursor on the current one.  This
	  behavior appears to be a bug, as inserting a file in the same
	  manner doesn't add an extra magicline. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded NANO_SMALL #ifdef, so that it's included
	  whenever its prototype is, and so it can compile when
	  DISABLE_OPERATINGDIR isn't defined and NANO_SMALL is. (DLR)
- global.c:
  shortcut_init()
	- Fix misplaced #endif keeping the "Full Justify" shortcut in
	  the search shortcut list from being included when NANO_SMALL
	  is defined but DISABLE_JUSTIFY isn't. (DLR)
	- Use NULL instead of 0 when a shortcut has no associated
	  function. (DLR)
  thanks_for_all_the_fish()
	- Free the justify buffer if it isn't empty. (DLR)
- nano.c:
  help_init()
	- Clarify the text describing double-escape character input.
	  Since ASCII is technically only seven bits wide, characters
	  128-255 aren't ASCII. (DLR, suggested by Michael Piefel)